--- a/package.json
+++ b/package.json
@@ -8,30 +8,31 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "api": "json-server --watch db.json",
+    "api": "json-server --host 192.168.0.111  --watch db.json",
     "test": "jest --watch --coverage=false",
     "testFinal": "jest"
   },
   "dependencies": {
-    "@expo/webpack-config": "^0.16.19",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.4.1",
     "axios": "^0.25.0",
-    "expo": "^47.0.6",
-    "expo-blur": "~12.0.1",
+    "expo": "~44.0.0",
+    "expo-blur": "~11.0.0",
     "intl": "^1.2.5",
     "jest": "^26.6.3",
-    "jest-expo": "^47.0.1",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-native-web": "~0.18.9"
+    "jest-expo": "^44.0.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@testing-library/react-native": "^11.5.0"
+    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/react-native": "^9.0.0",
+    "react-test-renderer": "^17.0.1"
   },
   "private": true,
   "jest": {
